# SerenityExample

./: Cargo.toml
src/: main.rs
src/commands/: meta.rs  mod.rs  owner.rs
