[package]
name = "SerenityExample"
version = "0.1.0"
authors = ["koreanpanda"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.7.1"
kankyo = "0.3.0"
log = "0.4.8"
#use vvvvvv first. build the project, then you can switch to [dependencies.serenity] field
#serenity = "0.7.3"


[dependencies.serenity]
version = "0.7.3"
features = ["cache", "framework", "standard_framework", "rustls_backend"]
path = "../../"